Add XOverlay interface support to both sdlvideosink and xvideosink. They're fully interchangeable now.
Original commit message from CVS:
Add XOverlay interface support to both sdlvideosink and xvideosink. They're fully interchangeable now.

--- a/gst-plugins-bad/ext/sdl/Makefile.am
+++ b/gst-plugins-bad/ext/sdl/Makefile.am
@@ -4,7 +4,8 @@ plugin_LTLIBRARIES = libgstsdlvideosink.la
 libgstsdlvideosink_la_SOURCES =  sdlvideosink.c
 ## FIXME I have my doubts about these opti flags
 libgstsdlvideosink_la_CFLAGS = $(GST_CFLAGS) $(SDL_CFLAGS)
-libgstsdlvideosink_la_LIBADD = $(SDL_LIBS)
+libgstsdlvideosink_la_LIBADD = $(SDL_LIBS) \
+		$(top_builddir)/gst-libs/gst/xoverlay/libgstxoverlay.la
 libgstsdlvideosink_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
 noinst_HEADERS = sdlvideosink.h
