--- a/gst-plugins-bad/gst-libs/gst/xoverlay/Makefile.am
+++ b/gst-plugins-bad/gst-libs/gst/xoverlay/Makefile.am
@@ -3,9 +3,8 @@ libgstinterfacesincludedir = \
 
 libgstinterfacesinclude_HEADERS = xoverlay.h
 
-lib_LTLIBRARIES = libgstxoverlay.la
+noinst_LTLIBRARIES = libgstxoverlay.la
 
 libgstxoverlay_la_SOURCES = xoverlay.c
-libgstxoverlay_la_LIBADD = 
 libgstxoverlay_la_CFLAGS = $(GST_CFLAGS) $(GST_OPT_CFLAGS)
-libgstxoverlay_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
+
