--- a/gst-plugins-base/gst-libs/gst/mixer/Makefile.am
+++ b/gst-plugins-base/gst-libs/gst/mixer/Makefile.am
@@ -5,11 +5,9 @@ libgstinterfacesinclude_HEADERS = \
 	mixer.h \
 	mixertrack.h
 
-lib_LTLIBRARIES = libgstmixer.la
+noinst_LTLIBRARIES = libgstmixer.la
 
 libgstmixer_la_SOURCES = \
 	mixer.c \
 	mixertrack.c
-libgstmixer_la_LIBADD = 
-libgstmixer_la_CFLAGS = $(GST_CFLAGS) $(GST_OPT_CFLAGS)
-libgstmixer_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
+libgstmixer_la_CFLAGS = $(GST_CFLAGS)
