--- a/gst-plugins-base/gst-libs/gst/navigation/Makefile.am
+++ b/gst-plugins-base/gst-libs/gst/navigation/Makefile.am
@@ -1,10 +1,8 @@
-lib_LTLIBRARIES = libgstnavigation.la
+noinst_LTLIBRARIES = libgstnavigation.la
 
 libgstnavigation_la_SOURCES = navigation.c
 
 libgstnavigationincludedir = $(includedir)/gstreamer-@GST_MAJORMINOR@/gst/navigation
 libgstnavigationinclude_HEADERS = navigation.h
 
-libgstnavigation_la_LIBADD =
 libgstnavigation_la_CFLAGS = $(GST_CFLAGS) $(GST_OPT_CFLAGS)
-libgstnavigation_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
