--- a/gst-plugins-base/gst-libs/gst/tuner/Makefile.am
+++ b/gst-plugins-base/gst-libs/gst/tuner/Makefile.am
@@ -6,12 +6,11 @@ libgstinterfacesinclude_HEADERS = \
 		tunernorm.h \
 		tunerchannel.h
 
-lib_LTLIBRARIES = libgsttuner.la
+noinst_LTLIBRARIES = libgsttuner.la
 
 libgsttuner_la_SOURCES = \
 	tuner.c \
 	tunernorm.c \
 	tunerchannel.c
-libgsttuner_la_LIBADD = 
-libgsttuner_la_CFLAGS = $(GST_CFLAGS) $(GST_OPT_CFLAGS)
-libgsttuner_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
+libgsttuner_la_CFLAGS = $(GST_CFLAGS)
+
