build doc/version.entities
Original commit message from CVS:
build doc/version.entities

--- a/gstreamer/configure.ac
+++ b/gstreamer/configure.ac
@@ -607,6 +607,7 @@ examples/typefind/Makefile
 examples/xml/Makefile
 tools/Makefile
 docs/Makefile
+docs/version.entities
 docs/faq/Makefile
 docs/gst/Makefile
 docs/libs/Makefile
