--- a/gst-plugins-good/configure.ac
+++ b/gst-plugins-good/configure.ac
@@ -54,6 +54,7 @@ if test "x$GST_WALL" = "xyes"; then
 
    if test "x$GST_CVS" = "xyes"; then
      AS_COMPILER_FLAG(-Werror,GST_ERROR="$GST_ERROR -Werror",GST_ERROR="$GST_ERROR")
+     GST_ERROR="$GST_ERROR -DG_DISABLE_DEPRECATED"
    fi
 fi
 
