Add G_DISABLE_DEPRECATED and fix deprecated code
Original commit message from CVS:
Add G_DISABLE_DEPRECATED and fix deprecated code

--- a/gstreamer/configure.ac
+++ b/gstreamer/configure.ac
@@ -53,6 +53,7 @@ dnl decide on error flags
 AS_COMPILER_FLAG(-Wall,GST_ERROR="$GST_ERROR -Wall",GST_ERROR="$GST_ERROR")
 if test "x$GST_CVS" = "xyes"; then
   AS_COMPILER_FLAG(-Werror,GST_ERROR="$GST_ERROR -Werror",GST_ERROR="$GST_ERROR")
+  GST_ERROR="$GST_ERROR -DG_DISABLE_DEPRECATED"
 fi
 
 dnl We disable static building for development, for time savings
