--- a/gstreamer/testsuite/plugin/Makefile.am
+++ b/gstreamer/testsuite/plugin/Makefile.am
@@ -2,8 +2,8 @@ include ../Rules
 
 plugin_LTLIBRARIES = libtestplugin.la libtestplugin2.la
 
-tests_pass = static dynamic static2 linked loading registry
-tests_fail = 
+tests_pass = dynamic linked loading registry
+tests_fail = static static2
 
 
 libtestplugin_la_SOURCES = testplugin.c
