--- a/gstreamer/testsuite/plugin/Makefile.am
+++ b/gstreamer/testsuite/plugin/Makefile.am
@@ -3,6 +3,7 @@ include ../Rules
 plugin_LTLIBRARIES = libtestplugin.la libtestplugin2.la
 
 tests_pass = dynamic linked loading registry static static2
+tests_fail =
 
 
 libtestplugin_la_SOURCES = testplugin.c
