disabling cleanup3 until it knows if it fails or passes
Original commit message from CVS:
disabling cleanup3 until it knows if it fails or passes

--- a/gstreamer/tests/old/testsuite/cleanup/Makefile.am
+++ b/gstreamer/tests/old/testsuite/cleanup/Makefile.am
@@ -1,15 +1,16 @@
 include ../Rules
 
 tests_pass = cleanup1 cleanup2 cleanup4 cleanup5
-tests_fail = cleanup3
+tests_fail = 
+#tests_that_work_sometimes = cleanup3
 
 # we have nothing but apps here, we can do this safely
 cleanup1_LDADD = $(GST_LIBS)
 cleanup1_CFLAGS = $(GST_CFLAGS) $(XML_CFLAGS) $(GLIB_CFLAGS)
 cleanup2_LDADD = $(GST_LIBS) 
 cleanup2_CFLAGS = $(GST_CFLAGS) $(XML_CFLAGS) $(GLIB_CFLAGS)
-cleanup3_LDADD = $(GST_LIBS) 
-cleanup3_CFLAGS = $(GST_CFLAGS) $(XML_CFLAGS) $(GLIB_CFLAGS)
+#cleanup3_LDADD = $(GST_LIBS) 
+#cleanup3_CFLAGS = $(GST_CFLAGS) $(XML_CFLAGS) $(GLIB_CFLAGS)
 cleanup4_LDADD = $(GST_LIBS) 
 cleanup4_CFLAGS = $(GST_CFLAGS) $(XML_CFLAGS) $(GLIB_CFLAGS)
 cleanup5_LDADD = $(GST_LIBS) 
