add initial version of gdkpixbuf loader for gtk that is capable of loading AVI and mpeg videos as GdkPixbufAnimation....
Original commit message from CVS:
add initial version of gdkpixbuf loader for gtk that is capable of loading AVI and mpeg videos as GdkPixbufAnimation. I'm not sure if such a thing would be useful or too much trouble, so I'll throw it at enough testers to figure it out ;) We might want to disable it by defualt though in the future. (Currently there is not even a configure switch implemented to disable it.)
This includes a fix to not use GError in gstgdkpixbuf's typefind function and to only return GST_TYPE_FIND_MINIMUM when doing typefinding via gdk as this breaks quite a bit with the GStreamer loader installed.

--- a/gst-plugins-good/ext/gdk_pixbuf/Makefile.am
+++ b/gst-plugins-good/ext/gdk_pixbuf/Makefile.am
@@ -6,5 +6,28 @@ libgstgdkpixbuf_la_CFLAGS = $(GST_CFLAGS) $(GTK_CFLAGS)
 libgstgdkpixbuf_la_LIBADD = $(GTK_LIBS)
 libgstgdkpixbuf_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
-noinst_HEADERS = gstgdkpixbuf.h
 
+if HAVE_GDK_LOADERS
+loaderdir = $(GTK_BASE_DIR)/lib/gtk-2.0/$(GTK_VERSION)/loaders
+loader_LTLIBRARIES = gst_loader.la
+
+gst_loader_la_CFLAGS = $(GST_CFLAGS) $(GTK_CFLAGS) -DGDK_PIXBUF_ENABLE_BACKEND
+gst_loader_la_SOURCES = 	\
+	gstgdkanimation.c	\
+	gst_loader.c
+gst_loader_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS) --avoid-version --module
+gst_loader_la_LIBADD = $(GTK_LIBS) $(GST_LIBS)
+
+gst_loader_headers = gstgdkanimation.h
+
+install-data-hook:
+	$(mkinstalldirs) $(GTK_BASE_DIR)/etc/gtk-2.0 ; \
+	$(QUERYLOADERS) > $(GTK_BASE_DIR)/etc/gtk-2.0/gdk-pixbuf.loaders ;
+
+else
+gst_loader_headers =
+endif
+
+
+noinst_HEADERS = gstgdkpixbuf.h \
+	$(gst_loader_headers)
