Remove trailing slash in last line of comment, it causes issues with certain versions of automake
Original commit message from CVS:
Remove trailing slash in last line of comment, it causes issues with certain versions of automake

--- a/gst-plugins-bad/gst-libs/ext/ffmpeg/Makefile.am
+++ b/gst-plugins-bad/gst-libs/ext/ffmpeg/Makefile.am
@@ -197,7 +197,7 @@ sources_powerpc = \
 #	ffmpeg/libavcodec/ppc/fft_altivec.c \
 #	ffmpeg/libavcodec/ppc/gmc_altivec.c \
 #	ffmpeg/libavcodec/ppc/idct_altivec.c \
-#	ffmpeg/libavcodec/ppc/mpegvideo_altivec.c \
+#	ffmpeg/libavcodec/ppc/mpegvideo_altivec.c
 else
 sources_powerpc =
 endif
