libgst-interfaces -> libgstinterfaces, plus we're not called libgstplay
Original commit message from CVS:
libgst-interfaces -> libgstinterfaces, plus we're not called libgstplay

--- a/gst-plugins-bad/pkgconfig/gstreamer-interfaces.pc.in
+++ b/gst-plugins-bad/pkgconfig/gstreamer-interfaces.pc.in
@@ -8,5 +8,5 @@ Description: Streaming-media framework, interfaces library
 Requires: gstreamer-@GST_MAJORMINOR@
 Version: @VERSION@
 
-Libs: -L${libdir} -lgstplay-@GST_MAJORMINOR@
+Libs: -L${libdir} -lgstinterfaces-@GST_MAJORMINOR@
 Cflags: -I${includedir}
