--- a/gstreamer/configure.ac
+++ b/gstreamer/configure.ac
@@ -62,6 +62,11 @@ dnl AM_DISABLE_STATIC
 
 AC_HEADER_STDC([])
 
+dnl define correct errorlevel for debugging messages. We want to have GST_ERROR
+dnl messages printed when running cvs builds
+if test "x$GST_CVS" = "xyes"; then
+  AC_DEFINE(GST_LEVEL_DEFAULT, GST_LEVEL_ERROR, [Default errorlevel to use])
+fi
 
 dnl ##############################
 dnl # Do automated configuration #
