set default errorlevel to NONE. Make configure change it to ERROR (the current value) when running cvs builds. This s...
Original commit message from CVS:
set default errorlevel to NONE. Make configure change it to ERROR (the current value) when running cvs builds. This should make releases not output any debugging information at all

--- a/gst-plugins-bad/configure.ac
+++ b/gst-plugins-bad/configure.ac
@@ -68,6 +68,12 @@ AC_ISC_POSIX
 
 AC_HEADER_STDC([])
 
+dnl define correct errorlevel for debugging messages. We want to have GST_ERROR
+dnl messages printed when running cvs builds
+if test "x$GST_CVS" = "xyes"; then
+  AC_DEFINE(GST_LEVEL_DEFAULT, GST_LEVEL_ERROR, [Default errorlevel to use])
+fi
+
 dnl ############################################
 dnl # Super Duper options for plug-in building #
 dnl ############################################
