--- a/gst-plugins-base/sys/ximage/Makefile.am
+++ b/gst-plugins-base/sys/ximage/Makefile.am
@@ -1,11 +1,9 @@
 
-OTHER_LIBS = -lX11 -lXext
-
 plugin_LTLIBRARIES = libgstximagesink.la
 
 libgstximagesink_la_SOURCES =  ximagesink.c 
 libgstximagesink_la_CFLAGS = $(GST_CFLAGS) $(X_CFLAGS)
-libgstximagesink_la_LIBADD = $(X_LIBS) $(OTHER_LIBS)
+libgstximagesink_la_LIBADD = $(X_LIBS)
 libgstximagesink_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS) \
 		$(top_builddir)/gst-libs/gst/navigation/libgstnavigation.la \
 		$(top_builddir)/gst-libs/gst/xoverlay/libgstxoverlay.la
