disting fixes, pixbuf loader still borked in regards to disting
Original commit message from CVS:
disting fixes, pixbuf loader still borked in regards to disting

--- a/gst-plugins-good/gst/wavenc/Makefile.am
+++ b/gst-plugins-good/gst/wavenc/Makefile.am
@@ -6,4 +6,4 @@ libgstwavenc_la_CFLAGS = $(GST_CFLAGS)
 libgstwavenc_la_LIBADD =
 libgstwavenc_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
-noinst_HEADERS = gstwavenc.h
+noinst_HEADERS = gstwavenc.h riff.h
