--- a/gst-plugins-good/gst/debug/Makefile.am
+++ b/gst-plugins-good/gst/debug/Makefile.am
@@ -1,10 +1,13 @@
 
-plugin_LTLIBRARIES = libgstefence.la
+plugin_LTLIBRARIES = libgstefence.la libgstnavigationtest.la
 
-noinst_HEADERS = efence.h
+noinst_HEADERS = efence.h gstnavigationtest.h
 
 libgstefence_la_SOURCES = efence.c
 
 libgstefence_la_CFLAGS = $(GST_CFLAGS)
 libgstefence_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
+libgstnavigationtest_la_SOURCES = gstnavigationtest.c
+libgstnavigationtest_la_CFLAGS = $(GST_CFLAGS) -I$(top_srcdir)/gst/videofilter
+libgstnavigationtest_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
