--- a/gstreamer/docs/libs/Makefile.am
+++ b/gstreamer/docs/libs/Makefile.am
@@ -193,6 +193,7 @@ distclean-local: clean
 	rm -f $(DOC_MODULE).hierarchy
 	rm -f *.stamp || true
 
+if DOC_HTML
 install-data-local:
 	$(mkinstalldirs) $(DESTDIR)$(TARGET_DIR)
 	(installfiles=`echo $(srcdir)/html/*.html $(srcdir)/html/*.png`; \
@@ -209,6 +210,9 @@ install-data-local:
 	  echo '-- Installing $(srcdir)/html/index.sgml' ; \
 	  $(INSTALL_DATA) $(srcdir)/html/index.sgml $(DESTDIR)$(TARGET_DIR); \
 	fi)
+else
+install-data-local:
+endif
 
 #
 # Require gtk-doc when making dist
