put docs last so it's the last to fail
Original commit message from CVS:
put docs last so it's the last to fail

--- a/gstreamer/Makefile.am
+++ b/gstreamer/Makefile.am
@@ -28,17 +28,18 @@ aclocaldir = $(datadir)/aclocal
 aclocal_DATA = gst-element-check-@GST_MAJORMINOR@.m4
 
 SUBDIRS = include gst libs tools \
-	$(SUBDIRS_TESTS) $(SUBDIRS_EXAMPLES) $(SUBDIRS_DOCS) \
-	pkgconfig po
+	$(SUBDIRS_TESTS) $(SUBDIRS_EXAMPLES) \
+	pkgconfig po \
+	$(SUBDIRS_DOCS)
 
 # These are all the possible subdirs
 DIST_SUBDIRS = include libs gst \
 	tools \
 	tests testsuite \
 	examples \
-	docs \
 	pkgconfig \
-	po
+	po \
+	docs
 
 EXTRA_DIST = gstreamer.spec.in gst-element-check.m4 \
 	     configure.ac autogen.sh depcomp \
