link against the .la file.  Note that we're linking against a plugin, which is technically not allowed.
Original commit message from CVS:
link against the .la file.  Note that we're linking against a
plugin, which is technically not allowed.

--- a/gstreamer/tests/old/testsuite/bytestream/Makefile.am
+++ b/gstreamer/tests/old/testsuite/bytestream/Makefile.am
@@ -4,5 +4,5 @@ tests_pass =
 tests_fail = test1 
 
 test1_SOURCES = test1.c gstbstest.c
-test1_LDFLAGS = -lgstbytestream -L$(top_srcdir)/libs/gst/bytestream
+test1_LDFLAGS = $(top_builddir)/libs/gst/bytestream/libgstbytestream.la
 
