--- a/gstreamer/testsuite/bytestream/Makefile.am
+++ b/gstreamer/testsuite/bytestream/Makefile.am
@@ -4,5 +4,5 @@ tests_pass =
 tests_fail = test1 
 
 test1_SOURCES = test1.c gstbstest.c
-test1_LDFLAGS = -lgstbytestream -L$(top_srcdir)/libs/gst/bytestream
+test1_LDFLAGS = $(top_builddir)/libs/gst/bytestream/libgstbytestream.la
 
